[tm821/#221] Fix frontend code using updated endpoints
