# backend/src/routers/game.py
@@ -1,4 +1,4 @@
-from typing import Annotated
+from typing import Annotated, Optional
 
 from fastapi import APIRouter, Body, Depends, Query, Security
 from sqlalchemy import func, select
@@ -26,6 +26,40 @@ router = APIRouter(
 )
 
 
+@router.get(
+    "/texts/next",
+    response_model=schemas.Text,
+)
+async def get_next_text(
+    *,
+    difficulty: Annotated[Optional[str], Query()] = None,
+    is_summary: Annotated[bool, Query()],
+    user: Annotated[models.User, Depends(get_current_user)],
+    session: Annotated[Session, Depends(get_session)],
+):
+    """
+    Gets the next text that the user has not attempted before.
+    """
+    text_ids = models.History.objects(user_id=user.id).distinct("text_id")
+
+    query_unseen = select(models.Text).where(models.Text.id.notin_(text_ids)).limit(1)
+    query_random = query_unseen.order_by(func.random()).limit(1)
+    if difficulty:
+        query_unseen = query_unseen.where(models.Text.difficulty == difficulty)
+        query_random = query_random.where(models.Text.difficulty == difficulty)
+
+    if is_summary:
+        query_unseen = query_unseen.where(models.Text.summary.isnot(None))
+        query_random = query_random.where(models.Text.summary.isnot(None))
+
+    if text := session.scalars(query_unseen).one_or_none():
+        return text
+    if text := session.scalars(query_random).one_or_none():
+        return text
+
+    raise NoTextAvailableException()
+
+
 # NOTE:
 # This endpoint cannot be named as `get_text`
 # because of the conflict with the endpoint in the admin router.
@@ -49,51 +83,13 @@ async def get_text_by_id(
     return text
 
 
-@router.get(
-    "/next-text",
-    response_model=schemas.Text,
-)
-async def get_next_text(
-    difficulty: Annotated[str, Query()],
-    is_summary: Annotated[bool, Query()],
-    user: Annotated[models.User, Depends(get_current_user)],
-    session: Annotated[Session, Depends(get_session)],
-):
-    """
-    Gets the next text that the user has not attempted before.
-    """
-    text_ids = models.History.objects(user_id=user.id).distinct("text_id")
-
-    query_unseen = (
-        select(models.Text)
-        .where(models.Text.difficulty == difficulty)
-        .where(models.Text.id.notin_(text_ids))
-        .limit(1)
-    )
-    query_random = (
-        query_unseen.where(models.Text.difficulty == difficulty)
-        .order_by(func.random())
-        .limit(1)
-    )
-    if is_summary:
-        query_unseen = query_unseen.where(models.Text.summary.isnot(None))
-        query_random = query_random.where(models.Text.summary.isnot(None))
-
-    if text := session.scalars(query_unseen).one_or_none():
-        return text
-    if text := session.scalars(query_random).one_or_none():
-        return text
-
-    raise NoTextAvailableException()
-
-
 # TODO:
 # Move this constant to somewhere else.
 NUM_QUESTIONS_PER_GAME = 10
 
 
 @router.get(
-    "/texts/{text_id}/next-questions",
+    "/texts/{text_id}/questions/next",
     response_model=list[schemas.QuestionMasked],
 )
 async def get_next_questions(
